Fixed #395 - Remove google guava lib  - Replaced many things with base JDK8 constructs.  - In JDK9 we can improve some more parts.  - We do not generat shaded artifact 'stash' anymore.  - Upgrade version number based on the change.